--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:image:height" content="400" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://twitter.com/Legion Network" />
-    <meta name="twitter:creator" content="https://twitter.com/Legion Network" />mm
+    <meta name="twitter:creator" content="https://twitter.com/Legion Network" />
     <meta name="twitter:image"        content="images/logo.html" />
     <meta name="twitter:title" content="Legion Network, A unique Multichain technology - the ability to manage your gaming assets by interacting" />
     <meta name="twitter:description"        content="The Best Of Blockchain In One Decentralised Super App" />
