--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                             <label for="hash"><span></span> <b>Provide your transaction hash below to receive
                                     token</b></label>
                             <input type="text" name="hash" id="hash" required="">
-                            <input type="submit" name="submit" value="Receive tokens">
+                            <input type="submit" name="submit" value="Claim tokens">
 
                         </form> <br>
                         <!-- <span><b>OR</b></span>
