--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                             data-animation-delay="1.1s" style="animation-delay: 1.1s; opacity: 1;">Become part of the
                             future of <strong>commerce</strong></h1>
                         <h5 class="animation presale_txt text-white animated fadeInUp" data-animation="fadeInUp"
-                            data-animation-delay="1.3s" style="animation-delay: 1.3s; opacity: 1;">Public SALE <mark
+                            data-animation-delay="1.3s" style="animation-delay: 1.3s; opacity: 1;">Presale <mark
                                 class="green">Live</mark></h5>
                         <div class="transparent_bg tk_counter_inner m-lg-0 banner_token text-center px-0 animation animated fadeIn"
                             data-animation="fadeIn" data-animation-delay="1.4s"
                             style="animation-delay: 1.4s; opacity: 1;">
-                            <i>Public Sale closes in:</i>
+                            <i>Presale closes in:</i>
                             <div class="timer_box timer_box_1 animation animated fadeInUp" data-animation="fadeInUp"
                                 data-animation-delay="1.2s" style="animation-delay: 1.2s; opacity: 1;">
                                 <p class="display-timer">
@@ -232,8 +232,8 @@
                                 <div class="col-md-7">
                                     <div class="pt-3 pb-3">
                                         <div class="title_dark title_border">
-                                            <h4>$NAFF Public Sale</h4>
-                                            <p>Public Sale Address: </p>
+                                            <h4>$NAFF Presale</h4>
+                                            <p>Presale Address: </p>
                                             <h6 style="font-size:12px">0x360B8F3A12c58Fb7c55362D1813cD333fae781d6</h6>
                                             <p></p>
 
@@ -274,8 +274,8 @@
                                 <div class="col-md-7">
                                     <div class="pt-3 pb-3">
                                         <div class="title_dark title_border">
-                                            <h4>$NAFF Public Sale</h4>
-                                            <p>Public Sale Address: </p>
+                                            <h4>$NAFF Presale</h4>
+                                            <p>Presale Address: </p>
                                             <h6 style="font-size:12px">0x360B8F3A12c58Fb7c55362D1813cD333fae781d6</h6>
                                             <p></p>
 
@@ -349,7 +349,7 @@
                     <div class="token_sale res_md_mb_40 res_md_mt_40 res_sm_mb_30 res_sm_mt_30">
                         <div class="tk_countdown text-center animation token_countdown_bg" data-animation="fadeIn"
                             data-animation-delay="1s" style="animation-delay: 1s; opacity: 0;">
-                            <i>Public Sale closes in:</i>
+                            <i>Presale closes in:</i>
                             <div class="tk_counter_inner text-center">
 
                                 <div class="timer_box timer_box_2 animation" data-animation="fadeInUp"
@@ -393,7 +393,7 @@
                                         > 75% </div>
                                 </div>
                                 <div class="text-center">
-                                    <p class="">Public Sale Address: </p>
+                                    <p class="">Presale Address: </p>
                                     <h6 >0x360B8F3A12c58Fb7c55362D1813cD333fae781d6</h6>
                                     <p></p>
                                 </div>
