--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="col-lg-6 offset-lg-3 col-md-12 col-sm-12">
                     <div class="title_default_light title_border text-center">
                         <h4 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s"
-                            style="animation-delay: 0.2s; opacity: 0;">Public Token Sale</h4>
+                            style="animation-delay: 0.2s; opacity: 0;">Presale Tokens Sale</h4>
                         <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s"
                             style="animation-delay: 0.4s; opacity: 0;">Become part of the future of commerce. </p>
                     </div>
@@ -431,7 +431,7 @@
                                 <h6 class="animation" data-animation="fadeInUp" data-animation-delay="1s"
                                     style="animation-delay: 1s; opacity: 0;"> $NAFF Exchange Rate</h6>
                                 <p class="animation" data-animation="fadeInUp" data-animation-delay="1.2s"
-                                    style="animation-delay: 1.2s; opacity: 0;"> 1 $NAFF = $0.075</p>
+                                    style="animation-delay: 1.2s; opacity: 0;"> 1 $NAFF = $0.025</p>
                             </div>
 
                         </div>
