--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="follow, noindex" />
-    <meta name="description" content="The Best Of Blockchain In One Decentralised Super App" />
+    <meta name="description" content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
     <meta name="dc.title" content="Legion Network - Worldwide Concert Streaming" />
     <meta name="dc.language" content="en_GB" />
-    <meta name="dc.description" content="The Best Of Blockchain In One Decentralised Super App" />
+    <meta name="dc.description" content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
     <meta name="dc.relation" content="index.html" />
     <meta name="dc.source" content="index.html" />
     <meta property="og:locale" content="en_GB" />                  
     <meta property="og:site_name" content="Legion Network" /> 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Legion Network, A unique Multichain technology - the ability to manage your gaming assets by interacting" />            
-    <meta property="og:description"        content="The Best Of Blockchain In One Decentralised Super App" />
+    <meta property="og:type" content="NAFFITI is the DAO-governed
+    gasless NFT launchpad and marketplace." />            
+    <meta property="og:description"        content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
     <meta property="og:url" content="index.html" />            
     <meta property="og:image"        content="images/logo.html" />
     <meta property="og:image:secure_url" content="images/logo.html" />
@@ -31,7 +31,7 @@
     <meta name="twitter:creator" content="https://twitter.com/Legion Network" />
     <meta name="twitter:image"        content="images/logo.html" />
     <meta name="twitter:title" content="Legion Network, A unique Multichain technology - the ability to manage your gaming assets by interacting" />
-    <meta name="twitter:description"        content="The Best Of Blockchain In One Decentralised Super App" />
+    <meta name="twitter:description"        content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
     <title>Welcome to NFTDAao</title>
     <link rel='dns-prefetch' href='http://s.w.org/' />
     <link rel="shortcut icon" href="images/favicon.html">
@@ -156,7 +156,7 @@
                         <div class="transparent_bg tk_counter_inner m-lg-0 banner_token text-center px-0 animation animated fadeIn"
                             data-animation="fadeIn" data-animation-delay="1.4s"
                             style="animation-delay: 1.4s; opacity: 1;">
-                            <i>Public closes in:</i>
+                            <i>Public Sale closes in:</i>
                             <div class="timer_box timer_box_1 animation animated fadeInUp" data-animation="fadeInUp"
                                 data-animation-delay="1.2s" style="animation-delay: 1.2s; opacity: 1;">
                                 <p class="display-timer">
@@ -233,7 +233,7 @@
                                     <div class="pt-3 pb-3">
                                         <div class="title_dark title_border">
                                             <h4>$NAFF Public </h4>
-                                            <p>Public  Address: </p>
+                                            <p>Public Sale Address: </p>
                                             <h6 style="font-size:12px">0x360B8F3A12c58Fb7c55362D1813cD333fae781d6</h6>
                                             <p></p>
 
@@ -349,7 +349,7 @@
                     <div class="token_sale res_md_mb_40 res_md_mt_40 res_sm_mb_30 res_sm_mt_30">
                         <div class="tk_countdown text-center animation token_countdown_bg" data-animation="fadeIn"
                             data-animation-delay="1s" style="animation-delay: 1s; opacity: 0;">
-                            <i>Public closes in:</i>
+                            <i>Public sale closes in:</i>
                             <div class="tk_counter_inner text-center">
 
                                 <div class="timer_box timer_box_2 animation" data-animation="fadeInUp"
@@ -393,7 +393,7 @@
                                         > 75% </div>
                                 </div>
                                 <div class="text-center">
-                                    <p class="">Public  Address: </p>
+                                    <p class="">Public sale address: </p>
                                     <h6 >0x360B8F3A12c58Fb7c55362D1813cD333fae781d6</h6>
                                     <p></p>
                                 </div>
