--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="follow, noindex" />
     <meta name="description" content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
-    <meta name="dc.title" content="Legion Network - Worldwide Concert Streaming" />
+    <meta name="dc.title" content="NAFFITI is the DAO-governed
+    gasless NFT launchpad and marketplace." />
     <meta name="dc.language" content="en_GB" />
     <meta name="dc.description" content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
     <meta name="dc.relation" content="index.html" />
@@ -24,13 +25,7 @@
     <meta property="og:url" content="index.html" />            
     <meta property="og:image"        content="images/logo.html" />
     <meta property="og:image:secure_url" content="images/logo.html" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="400" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="https://twitter.com/Legion Network" />
-    <meta name="twitter:creator" content="https://twitter.com/Legion Network" />
-    <meta name="twitter:image"        content="images/logo.html" />
-    <meta name="twitter:title" content="Legion Network, A unique Multichain technology - the ability to manage your gaming assets by interacting" />
+
     <meta name="twitter:description"        content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
     <title>Welcome to NFTDAao</title>
     <link rel='dns-prefetch' href='http://s.w.org/' />
