--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="dc.relation" content="index.html" />
     <meta name="dc.source" content="index.html" />
     <meta property="og:locale" content="en_GB" />                  
-    <meta property="og:site_name" content="Legion Network" /> 
+    <meta property="og:site_name" content="NAFFITI" /> 
     <meta property="og:type" content="NAFFITI is the DAO-governed
     gasless NFT launchpad and marketplace." />            
     <meta property="og:description"        content="NAFF Token Offering is a fair way of securing new partners on the Naffiti platform." />
